# Claude_Bridge

./: .gitignore  .pnpm-buildable-deps.yaml  API_COVERAGE_ANALYSIS.md  CLAUDE.md  Claude_Figma_Bridge_Project_Brief.md  LICENSE  README.md  TEST_PLAN.md  build_color_map.js  color_var_map.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-bridge-silent.vbs  start-bridge.bat  tmp_all_vars.json  tmp_ds_payload.json  tmp_full_binding.sh  tmp_update_colors.sh  tmp_update_colors2.sh  tmp_update_colors3.sh  tmp_variables.json  tree.json  variables_data.json
.claude/: settings.json
bridge-server/: esbuild.config.mjs  package.json  tsconfig.json
desktop/: README.md  generate-icons.mjs  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: API_COVERAGE_ANALYSIS.md  Claude_Figma_Bridge_Project_Brief.md  TEST_PLAN.md  figma-api-gap-analysis.md  workflow-comparison.md
e2e/: README.md  test-organizing-principles.ts  test-runner.ts  test-ssrf-protection.ts  test-website-extraction.ts  test-workflow-commands.ts  tsconfig.json
figma-plugin/: build.js  manifest.json  package.json  tsconfig.json
orchestrator/: package.json  tsconfig.json
prompts/: bind-variables.md  design-system-figma-file-workflow.md  figma-bridge.md  figma-design-system-workflow.md  figma-documentation.md  figma-variables.md  memory-server.md  performance-analysis.md  remote-control.md  website-design-system.md  workflows.md
shared/: package.json
(+178 files in other folders)
