[package]
name = "bridge-to-fig"
version = "1.0.0"
description = "Desktop companion app for Bridge to Fig"
authors = ["Brooksmade"]
license = "MIT"
repository = "https://github.com/Brooksmade/Bridge-to-Fig"
edition = "2021"

[lib]
name = "bridge_to_fig_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
ureq = { version = "2", features = ["json"] }
